fixed container being off center

--- a/style.css
+++ b/style.css
@@ -79,18 +79,16 @@ button {
 @media (max-width: 500px) {
 
     body {
+        display: flex;
+        flex-direction: column;
         margin: 60px 30px 60px 30px;
     }
 
     .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 80%;
+        width: 100%;
     }
     .bottom-half {
         display: flex;
         flex-direction: column;
     }
-
 }
